--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-home-title: 君子博学而日三醒乎己，则知明而行无过矣
-description: 简单生活 | 极客追求 | 直渣男
+home-title: 千里之行 始于足下
+description: 
 header-img: "/assets/img/hero.jpg"
 ---
 
